# TimedWorker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: timed_workerConfig.cmake.in
examples/: basic.cpp
include/tw/: timed_worker.hpp
test/: timed_worker_tests.cpp
